--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,11 @@ doctype html
 html
 	head
 		block title
+		link(rel='stylesheet', href='/stylesheets/vendor/bootstrap.min.css')
 		link(rel='stylesheet', href='/stylesheets/style.css')
 	body
 		block content
+
+
+		script(src='/javascripts/vendor/jquery-2.2.3.min.js')
+		script(src='/javascripts/vendor/bootstrap.min.js')
