Implementing the Home btn on login page nav bar

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -1,2 +1,14 @@
+/////////////////////
+//  Navigation
+/////////////////////
+.navbar-brand
+  a
+    color inherit
+    text-decoration none
+
+/////////////////////
+//  Contents
+/////////////////////
+
 .content
   margin-top 70px
