--- a/views/auth/login.jade
+++ b/views/auth/login.jade
@@ -3,7 +3,8 @@ extends ../layout
 block header
   nav.navbar.navbar-inverse.navbar-fixed-top
     .container
-      ul.nav.navbar-nav.navbar-right
+      .nav.navbar-nav.navbar-brand
+        a(href="/", title='home') Home
 
 block content
   .row
