Implementing the route handler function which uses the stored JSON data  and handle rendering the requested page

--- a/views/auth/login.jade
+++ b/views/auth/login.jade
@@ -3,7 +3,7 @@ extends ../layout
 block header
   nav.navbar.navbar-inverse.navbar-fixed-top
     .container
-      .nav.navbar-nav.navbar-brand
+      .navbar-brand
         a(href="/", title='home') Home
 
 block content
