--- a/views/layout.jade
+++ b/views/layout.jade
@@ -10,6 +10,8 @@ html
     block header
       nav.navbar.navbar-inverse.navbar-fixed-top
         .container
+          .navbar-brand
+            a(href="/", title='home') Home
           ul.nav.navbar-nav.navbar-right
             li
               a(href="/login", title='login') login
